--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./server/index.js"
+    "start": "node ./server/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^1.19.2"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.4",
+    "grunt-contrib-uglify": "^4.0.1"
   }
 }
